# vita_external_sqlite_api

./: .gitignore  README.md  build.cake
source/: CMakeLists.txt  test_sqlite.cpp
source/cmake/modules/: DllVersionResource.rc  ExeVersionResource.rc  generate_product_dll_version.cmake  generate_product_exe_version.cmake  use_msvc_project_config.cmake
source/sqlite/contrib/: extension-functions.c
source/sqlite/ext/: fts5.c
source/sqlite/generic/: interop.c  interop.h
